--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,6 +7,7 @@ body {font-family: Verdana,sans-serif;margin:0}
   max-width: 1080px;
   position: relative;
   margin: auto;
+  height: 30%;
 }
 
 /* Next & previous buttons */
