--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,10 +4,9 @@ body {font-family: Verdana,sans-serif;margin:0}
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1080px;
+  max-width: 100%;
   position: relative;
   margin: auto;
-  height: 30%;
 }
 
 /* Next & previous buttons */
